--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               </p>
             <figure>
               <p align="center">
-                <img src="./codec_architecture.png" style="width: 80%; max-width: 1000px;" class="center" />
+                <img src="./figs/codec_architecture.png" style="width: 80%; max-width: 1000px;" class="center" />
               </p>
               <figcaption>
                 <p style="text-align: justify;">
