--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <table align=center width=500px>
           <center>
             <span class="link-block">
-              <a href="#"
+              <a href="https://arxiv.org/abs/2510.21196"
                 class="external-link button is-normal is-rounded is-dark">
                 <span class="icon" style="color: black;">
                   <i class="fa fa-file-text" aria-hidden="true"></i>
